Fixed text wrapping in project cards.

--- a/css/_project-cards.scss
+++ b/css/_project-cards.scss
@@ -43,7 +43,7 @@
   margin: 12px 0 12px 0;
   background-color: $color-mono-primary;
   color: $color-primary;
-  height: 60px;
+  height: 80px;
 }
 
 .project-button {
