--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@
   margin: 12px 0 12px 0;
   background-color: #fff;
   color: #191e2b;
-  height: 60px; }
+  height: 80px; }
 
 .project-button {
   color: #191e2b; }
